<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailLayout">


    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_name_detail_edit_text"
        android:hint="@string/product_name_text"
        app:backgroundTint="@color/colorPrimary"
        style="@style/etxtStyle" />


    <android.support.v7.widget.AppCompatEditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_price_detail_edit_text"
        android:inputType="text"
        android:hint="@string/product_price_text"
        app:backgroundTint="@color/colorPrimary"
        style="@style/etxtStyle"/>



    <android.support.v7.widget.AppCompatEditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_quantity_detail_edit_text"
        android:inputType="text"
        android:hint="@string/product_quantity_text"
        app:backgroundTint="@color/colorPrimary"
        style="@style/etxtStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_button"
            android:text="@string/order_button_text"
            style="@style/btnStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:text="@string/delete_button_text"
            style="@style/btnStyle"/>
    </LinearLayout>

</LinearLayout>